--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://two-factor-auth-backend.vercel.app
+VITE_API_URL=https://todo-2fa-server.onrender.com
 VITE_GOOGLE_CLIENT_ID=3695250659-31k0kn0l5odf6b6n1fmml2f2k6umk6ne.apps.googleusercontent.com
